# study_assistant

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHEATSHEET.md  CONTRIBUTING.md  README.md  docker-compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: checkpoint.py  sync_issues.py
.github/workflows/: ci.yaml  docs-deploy.yaml  sync-checkpoints.yaml  sync-issues.yaml
docs/: architecture.md  checkpoints.md  conf.py  index.md  issues.md  plan.md
docs/decisions/: 0000-stack.md  0001-rag-retrieval-boundary.md  0002-local-embedding-and-reranking.md  0003-local-single-user-scope.md  0004-cli-batch-ingestion.md  0005-documentation-tooling.md  README.md
docs/reference/: index.md
infra/postgres/: init.sql
