[project]
name = "study-assistant"
version = "0.0.0"
description = "Local, single-user RAG study assistant over course materials."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

# The repo root is a uv workspace root, not an installable package.
[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

# Workspace members are developed in-place; wire them in as editable sources.
[tool.uv.sources]
rag_core = { workspace = true }

[dependency-groups]
dev = [
    "rag_core",
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "sphinx>=8.0",
    "myst-parser>=4.0",
    "sphinx-autodoc-typehints>=2.0",
    "furo>=2024.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["packages/rag_core/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
# Resolve the src-layout package from source so typechecking needs no install
# (keeps pre-commit's isolated mypy env and CI consistent).
mypy_path = "packages/rag_core/src"
files = ["packages/rag_core/src", "packages/rag_core/tests"]
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["packages"]
